# mcpeasy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  TODO.md  dev.py  docker-compose.prod.yml  docker-compose.yml  fly.toml  migrate.sh  pyproject.toml
config/: deployment.dev.yaml  deployment.prod.yaml  deployment.yaml
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  Layout.jsx  ResourceConfigurationDialog.jsx  SystemMonitoring.jsx  SystemPromptPanel.jsx  ToolCallDetailDialog.jsx  ToolCallsStats.jsx  ToolCallsTable.jsx  ToolConfigurationDialog.jsx
frontend/src/config/: index.js
frontend/src/hooks/: useAuth.js
src/: database.py  main.py
src/admin/: __init__.py  api.py  auth.py
src/custom_resources/: .gitkeep  README.md
src/custom_tools/: .gitkeep  README.md
src/migrations/: __init__.py  alembic.ini  env.py
src/models/: __init__.py  admin.py  api_key.py  base.py  client.py  configuration.py  knowledge.py  system_prompt.py  tool_call.py  youtube.py
src/resources/: base.py  registry.py  types.py
src/server/: factory.py
src/services/: __init__.py  email.py  embeddings.py  firecrawl.py  openrouter.py
src/tools/: __init__.py  base.py  execution_queue.py  registry.py  types.py
src/utils/: prompt_generator.py
templates/: MIGRATIONS_README.md
templates/custom_resource/: README.md  __init__.py  models.py  requirements.txt  resource.py
templates/custom_tool/: README.md  __init__.py  models.py  requirements.txt  tool.py
(+49 files in other folders)
